# synctodoist

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: add-to-project.yml  autocreate-bump-dependencies-issue.yml  deploy-docs.yml  pytest.yml
docs/: CNAME  index.md
docs/explanations/: index.md
docs/how-tos/: convenience-methods.md  index.md  settings.md
docs/reference/: exceptions.md  index.md  managers.md  models.md  todoist_api.md
docs/stylesheets/: extra.css
docs/tutorials/: getting-started.md  prereqs.md
explanations/: index.html
how-tos/convenience-methods/: index.html
how-tos/settings/: index.html
pytodoist/: __init__.py  todoist_api.py
pytodoist/models/: __init__.py  command.py  due.py  label.py  project.py  reminder.py  section.py  task.py  utils.py
reference/: index.html
reference/exceptions/: index.html
reference/managers/: index.html
reference/models/: index.html
reference/todoist_api/: index.html
scripts/: release.sh
synctodoist/: exceptions.py  todoist_api.py
synctodoist/managers/: __init__.py  base_manager.py  command_manager.py  label_manager.py  project_manager.py  reminder_manager.py  section_manager.py  task_manager.py
synctodoist/models/: __init__.py  command.py  due.py  enums.py  label.py  project.py  reminder.py  section.py  settings.py  task.py  todoist_base_model.py
tests/: conftest.py  test_command_manager.py  test_due.py  test_labels.py  test_projects.py  test_reminders.py  test_sections.py  test_tasks.py  test_todoist_api.py  test_todoist_base_model.py
tutorials/getting-started/: index.html
tutorials/prereqs/: index.html
